--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,8 +11,8 @@ variables:
   dockerRegistryServiceConnection: '626decf6-f112-479e-9c0d-02a52c1aae06'
   imageRepository: 'carsentialbackend'
   containerRegistry: 'carsential.azurecr.io'
-  dockerfilePath: '$(Build.SourcesDirectory)/back-end/Dockerfile'
-  buildContext: '$(Build.SourcesDirectory)/back-end'
+  dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
+  buildContext: '$(Build.SourcesDirectory)'
   tag: 'latest'
 
 stages:
